# gyger

./: .gitignore  README.md  discovery.html  genindex.html  index.html  known_issues.html  mxii.html  objects.inv  pyproject.toml  search.html  searchindex.js  tg5012a.html  tg5012a.py  valve.py  vcmini.html
.doctrees/: discovery.doctree  environment.pickle  index.doctree  known_issues.doctree  mxii.doctree  tg5012a.doctree  vcmini.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/sheetjet/: discovery.html  gyger.html  mxii.html  tg5012a.html
docs/: conf.py  index.rst  known_issues.rst  modules.rst  sheetjet.rst
sheetjet/: __init__.py  discovery.py  gyger.py  mxii.py  tg5012a.py  valve.py
